<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/galeria_fotos"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButtonGaleria"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="300dp"
        android:background="@null"
        android:contentDescription="@string/back_button_description"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/backbutton"
        app:layout_constraintBottom_toBottomOf="@+id/titleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleTextView"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fotosRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:padding="4dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"
        app:layout_constraintBottom_toTopOf="@+id/buttonsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <ImageButton
            android:id="@+id/pickFromGalleryButton"
            android:layout_width="70dp"
            android:layout_height="71dp"
            android:background="@drawable/gray_circle"
            android:contentDescription="@string/pick_from_gallery_description"
            android:scaleType="fitCenter"
            android:src="@drawable/up"
            android:layout_marginEnd="20dp"/>

        <ImageButton
            android:id="@+id/grayCircleButton"
            android:layout_width="70dp"
            android:layout_height="71dp"
            android:background="@drawable/gray_circle"
            android:contentDescription="@string/adicionar_foto"
            android:scaleType="fitCenter"
            android:src="@drawable/add" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>