<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResumoFinanceiroActivity">
    <View
    android:id="@+id/top_band_resumo"
    android:layout_width="0dp"
    android:layout_height="120dp"  android:background="#00a5c3"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewResumoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_resumo_financeiro"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:paddingTop="16dp"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
        android:id="@+id/exportPdfIcon"
        android:layout_width="116dp"
        android:layout_height="88dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="0dp"
        android:clickable="true"
        android:contentDescription="Exportar PDF"
        android:focusable="true"

        android:src="@drawable/visualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewResumoTitle" />

    <LinearLayout
        android:id="@+id/layoutSpinners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_band_resumo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/selecione_tipo_resumo" />

            <Spinner
                android:id="@+id/spinnerTipoResumo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/selecione_periodo" />

            <Spinner
                android:id="@+id/spinnerPeriodoFiltro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDatasCustomizadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_marginBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutSpinners">

        <Button
            android:id="@+id/buttonDataInicio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/data_inicio"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/top_band_color"/>

        <Button
            android:id="@+id/buttonDataFim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/data_fim"
            android:layout_marginStart="4dp"
            android:backgroundTint="@color/top_band_color"/>
    </LinearLayout>
    <Button
        android:id="@+id/buttonAplicarFiltroCustomizado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aplicar_filtro"
        android:visibility="gone"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/layoutDatasCustomizadas"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewResumos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTotalResumo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAplicarFiltroCustomizado"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_resumo_mensal" />

    <TextView
        android:id="@+id/textViewTotalResumo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="end"
        android:paddingTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="Total Geral: R$ 0,00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>